syntax = "proto3";
package listener;

option java_package = "net.smackem.ylang.listener";
option java_outer_classname = "YLangProtos";

service ImageProc {
    rpc ProcessImage (stream ProcessImageRequest) returns (stream ProcessImageResponse) {}
}

message ProcessImageRequest {
    string sourceCode = 1;
    bytes imageDataPng = 2;
}

message ProcessImageResponse {
    enum CompilationResult {
        UNDEFINED = 0;
        OK = 1;
        ERROR = 2;
    }
    CompilationResult result = 1;
    string message = 2;
    bytes imageDataPng = 3;
    string logOutput = 4;
}
